# Particle-Simulator-v3

./: .gitignore  .gitmodules  CMakeLists.txt  CollisionManager.cpp  CollisionManager.h  Globals.h  Particle Simulator.h  Particle.cpp  Particle.h  ParticleSimulator.cpp  ParticleThread.cpp  ParticleThread.h  README.md  SimulatorGUI.cpp  SimulatorGUI.h  Structures.h  vcpkg.json
Client-Explorer/: .gitignore  .gitmodules  Main.java  README.md  pom.xml
Client-Explorer/src/main/java/com/particlesimulator/: GUI.java  Main.java  Utils.java  Window.java
Client-Explorer/src/main/java/com/particlesimulator/network/: Client.java
Client-Explorer/src/main/java/com/particlesimulator/objects/: Entity.java  NPC.java  ObjectManager.java  Particle.java  Player.java
Client-Explorer/src/main/java/com/particlesimulator/render/: Texture.java
Objects/: DebugCircle.cpp  ObjectManager.cpp  ObjectManager.h  Particle.cpp  Particle.h  Player.cpp  Player.h  Wall.cpp  Wall.h
Server-Developer/: CMakeLists.txt  CollisionManager.cpp  CollisionManager.h  Globals.h  ParticleSimulator.cpp  SimulatorGUI.cpp  SimulatorGUI.h  Structures.h
Server-Developer/Network/: MessageParser.cpp  MessageParser.h  Server.cpp  Server.h
Server-Developer/Objects/: DebugCircle.cpp  DebugCircle.h  ObjectManager.cpp  ObjectManager.h  Particle.cpp  Player.cpp  Player.h  Wall.cpp
